# sensor-api-server

./: README.md  pyproject.toml
sensors/: amg8833.py
src/api_server/: main.py
src/sensors/: amg8833.py  cached_amg8833.py  i2cdriver.py
