[project]
name = "sensor-api-server"
version = "0.1.1"
description = "A simple server providing an API containing sensor details"
authors = [
    {name = "big-jr",email = "githubcomms@softwarepragmatism.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "smbus2 (>=0.5.0,<0.6.0)",
    "fastapi[standard] (>=0.120.0)",
    "uvicorn[standard] (>=0.38.0, <0.40.0)"   # Cover fastapi-introduced vuln in h11
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
black = "^25.1.0"
pylint = "^3.3.0"
ruff = "^0.9.0"
isort = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
