[project]
name = "sensor-api-server"
version = "0.1.1"
description = "A simple server providing an API containing sensor details"
authors = [
    {name = "big-jr",email = "githubcomms@softwarepragmatism.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "smbus2 (>=0.5.0,<0.6.0)",
    "fastapi[standard] (>=0.120.0)",
    "uvicorn[standard] (>=0.38.0, <0.40.0)"   # Cover fastapi-introduced vuln in h11
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2"
pylint = ">=4.0.4"
ruff = ">=0.14.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
